Bug 2028160 - Fix whitespace below searchbar obscuring back button focus indicator r=hjones,desktop-theme-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D291523

--- a/browser/themes/shared/preferences/preferences.css
+++ b/browser/themes/shared/preferences/preferences.css
@@ -62,6 +62,9 @@
 }
 
 #search-container {
+  --search-container-padding: var(--space-small);
+  --search-container-margin: calc(var(--focus-outline-width) + var(--focus-outline-offset));
+
   position: sticky;
   top: 0;
   /* Bug 2026689 Negative margin is used here to hide the borders of setting-controls on scroll
@@ -74,8 +77,11 @@
   z-index: 2;
   background-color: var(--background-color-canvas);
   padding-top: 40px;
-  padding-bottom: var(--space-large);
+  padding-bottom: var(--search-container-padding);
   padding-inline: var(--focus-outline-offset);
+  /* Ensure focus indicators on elements below the search container
+     aren't obscured. */
+  margin-bottom: var(--search-container-margin);
 }
 
 #searchInput {
@@ -95,7 +101,7 @@
   margin-top: 32px;
   padding-top: 0;
   padding-inline-end: 42px;
-  scroll-padding-top: calc(40px + var(--space-large) + 40px);
+  scroll-padding-top: calc(40px + var(--search-container-padding) + var(--search-container-margin) + 40px);
 
   @media (max-width: 830px) {
     padding-inline: var(--space-medium);
